<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Shared -->
    <string name="app_name">iFindAJob</string>
    <string name="app_label">iFindAJob</string>
    <string name="app_main_header">\n- iFindAJob -</string>
    
    <!-- Homepage -->
    <string name="app_intro1">-------
    </string>
    <string name="app_intro2">To get searching, press your Menu button and choose the \'Find Jobs\' option to
    begin searching for I.T. jobs around the globe.\n\nIf the Android app has helped you, please use
    the \'Share App\' button in the menu to spread the word!</string>
    
    <!-- Search page -->
    <string name="search_button_text">Look for Jobs</string>
    <string name="search_hint">Enter job keywords..</string>
    
    <!-- Job details page -->
    <string name="details_section_header">Position Information</string>
    <string name="details_job_map">Job City on Map</string>
    <string name="details_job_title">Title:</string>
    <string name="details_job_company_name">Company:</string>
    <string name="details_job_city">City:</string>
    <string name="details_job_post_date">Post Date:</string>
    <string name="details_job_has_relocation_assistance">Has Relocation Assistance:</string>
    <string name="details_job_requires_telecommuting">Requires Telecommuting:</string>
    <string name="details_job_description_header">Job Description</string>
    <string name="details_job_view_browser">View in Browser</string>
    <string name="details_job_save">Save Job</string>
    
    <!-- Preferences page -->
    <string name="preferences_intro">Please configure options to your liking:</string>
    <string name="preferences_skip_home">Skip Homepage</string>
    
    <!-- Widget -->
    <string name="widget_title">iFindAJob - Saved Jobs</string>
    <string name="widget_empty">No jobs have been saved.</string>
</resources>
