<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/activity_background"
              android:gravity="center_horizontal">
       
    <ImageView android:id="@+id/main_logo"
                   android:layout_width="150dp"
                   android:layout_height="150dp"
                   android:gravity="center_horizontal"
                   android:paddingTop="40dp"
                   android:contentDescription="@string/details_job_map" />
    
    <TextView 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:textColor="#926239"
        android:textSize="40sp"
        android:gravity="center_horizontal"
        android:text="@string/app_main_header"
    />
    
    <TextView 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:layout_marginLeft="5px"
        android:layout_marginRight="5px"
        android:textColor="#926239"
        android:textSize="13sp"
        android:gravity="center_horizontal"
        android:text="@string/app_intro1"
    />
    
    <TextView 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_marginLeft="5px"
        android:layout_marginRight="5px"
        android:textColor="#926239"
        android:textSize="13sp"
        android:gravity="center_horizontal"
        android:text="@string/app_intro2"
    />
</LinearLayout>

